<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.incometaxandemicalculator.EMIActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_principal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/hint_principal"
                    android:inputType="number"
                    android:singleLine="true"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/hint_interest"
                    android:inputType="number"
                    android:singleLine="true"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/input_layout_tenure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/years"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/hint_years"
                    android:inputType="number"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_calculate2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="#000000"
                android:text="Calculate"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText" />


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/input_layout_emi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/emi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_emi"
                    android:inputType="number"
                    android:maxEms="0"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/input_layout_total_Interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/interest_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_interest_total"
                    android:inputType="number"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

